Add `say_hello`; update index

--- a/index.ipynb
+++ b/index.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "#| hide\n",
-    "from knowledge_graphs.core import *"
+    "from knowledge_graphs.ner import *"
    ]
   },
   {
@@ -75,13 +75,6 @@
    "source": [
     "1+1"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
