Updata 01_nerES with Transformers

--- a/01_nerES.ipynb
+++ b/01_nerES.ipynb
@@ -86,14 +86,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/development/mambaforge/envs/fastai/lib/python3.9/site-packages/torch/amp/autocast_mode.py:198: UserWarning: User provided device_type of 'cuda', but CUDA is not available. Disabling\n",
-      "  warnings.warn('User provided device_type of \\'cuda\\', but CUDA is not available. Disabling')\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -114,6 +106,14 @@
       "y ... cc\n",
       "los ... det\n",
       "referéndums ... conj\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/development/mambaforge/envs/fastai/lib/python3.9/site-packages/torch/amp/autocast_mode.py:198: UserWarning: User provided device_type of 'cuda', but CUDA is not available. Disabling\n",
+      "  warnings.warn('User provided device_type of \\'cuda\\', but CUDA is not available. Disabling')\n"
      ]
     }
    ],
@@ -293,6 +293,27 @@
     "\n",
     "for tok in doc:\n",
     "    print(tok.text, \"...\", tok.dep_)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentences = list(doc.sents)\n",
+    "len(sentences)"
    ]
   },
   {
@@ -1081,8 +1102,85 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'entity': 'B-LOC', 'score': 0.9244194, 'index': 1, 'word': 'Bruselas', 'start': 0, 'end': 8}, {'entity': 'B-ORG', 'score': 0.9903048, 'index': 10, 'word': 'Rusia', 'start': 53, 'end': 58}, {'entity': 'B-LOC', 'score': 0.99845505, 'index': 16, 'word': 'Ucrania', 'start': 78, 'end': 85}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import AutoTokenizer, AutoModelForTokenClassification\n",
+    "from transformers import pipeline\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"Davlan/bert-base-multilingual-cased-ner-hrl\")\n",
+    "model = AutoModelForTokenClassification.from_pretrained(\"Davlan/bert-base-multilingual-cased-ner-hrl\")\n",
+    "nlp = pipeline(\"ner\", model=model, tokenizer=tokenizer)\n",
+    "example = \"Bruselas propone una nueva ronda de sanciones contra Rusia por la escalada en Ucrania y los referéndums\"\n",
+    "ner_results = nlp(example)\n",
+    "print(ner_results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'entity': 'B-LOC', 'score': 0.99951065, 'index': 8, 'word': 'Ucrania', 'start': 22, 'end': 29}, {'entity': 'B-LOC', 'score': 0.99652123, 'index': 14, 'word': 'Rusia', 'start': 49, 'end': 54}, {'entity': 'B-LOC', 'score': 0.8970771, 'index': 23, 'word': 'Occidente', 'start': 88, 'end': 97}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "example2 = \"Regiones prorrusas de Ucrania piden ser parte de Rusia tras referendos cuestionados por Occidente\"\n",
+    "ner2_results = nlp(example2)\n",
+    "print(ner2_results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'propone'"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nlp = spacy.load(\"es_dep_news_trf\")\n",
+    "get_relation(example)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'piden'"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_relation(example2)"
+   ]
   }
  ],
  "metadata": {
